fixed hover state on site-header menu

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -334,7 +334,7 @@
         <nav class="uq-site-header__navigation" aria-label="Site navigation" id="jsNav">
           <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-1">
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav uq-site-header__navigation__list-item--active">
-              <a href="/study" aria-haspopup="true" aria-expanded="false">Study</a>
+              <a href="/study" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">Study</a>
               <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Study sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Study sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
@@ -376,7 +376,7 @@
               </ul>
             </li>
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
-              <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+              <a href="/admissions" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">Admissions</a>
               <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show Admissions sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="Admissions sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
@@ -406,7 +406,7 @@
               </ul>
             </li>
             <li class="uq-site-header__navigation__list-item uq-site-header__navigation__list-item--has-subnav">
-              <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+              <a href="/university-life" aria-haspopup="true" aria-expanded="false" class="uq-site-header__navigation__list-link">University life</a>
               <button class="uq-site-header__navigation__sub-toggle"><span class="visually-hidden">Show University life sub-navigation</span></button>
               <ul class="uq-site-header__navigation__list uq-site-header__navigation__list--level-2" aria-label="University life sub-navigation">
                 <li class="uq-site-header__navigation__list-item">
@@ -424,13 +424,13 @@
               </ul>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/events">Events</a>
+              <a href="/events" class="uq-site-header__navigation__list-link">Events</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/stories">Stories</a>
+              <a href="/stories" class="uq-site-header__navigation__list-link">Stories</a>
             </li>
             <li class="uq-site-header__navigation__list-item">
-              <a href="/contact-us">Contact</a>
+              <a href="/contact-us" class="uq-site-header__navigation__list-link">Contact</a>
             </li>
           </ul>
         </nav>
