--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -690,7 +690,6 @@
       const appHeight = () => {
         const doc = document.documentElement
         doc.style.setProperty('--app-height', `${window.innerHeight}px`)
-        console.log(window.innerHeight);
       }
       window.addEventListener('resize', appHeight)
       appHeight()
@@ -705,6 +704,20 @@
           backLinkBefore: ' ',
         });
 
+        this.searchToggle = document.querySelector('.main-nav__search-toggle');
+
+        this.searchToggle.addEventListener('click', () => {
+          menuLeft.close();
+        });
+
+
+        var slideMenuBackButtons = document.querySelectorAll('.slide-menu__backlink, .global-mobile-nav__audience-link');
+        
+        Array.prototype.forEach.call(slideMenuBackButtons, function(el, i){
+            el.addEventListener('click', () => {
+              document.querySelector('.global-mobile-nav').scrollTop = 0;
+            });
+        });
       });
     </script>
     <script type="text/javascript" src="js/slide-menu.js"></script></body>
