--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -75,7 +75,7 @@
                   </div>
               </div>
               </li>
-              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown new-header__main-nav-link--active" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+              <li><a class="new-header__main-nav-link main-nav-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
                 <div class="new-header__megamenu-wrapper">
                   <div class="new-header__megamenu">
                     <a href="#" class="megamenu__overview-link">Research overview</a>
