spacing on slider-menu. fixes to megamenu

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -184,8 +184,8 @@
           <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
         </div> -->
         <ul>
-          <li  class="new-header__newglobal-nav-item">
-            <a  class="new-header__newglobal-nav-link" href="#">Study</a>
+          <li class="new-header__newglobal-nav-item">
+            <a class="new-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
             <ul>
               <li>
                 <a href="#">Study overview</a>
@@ -203,7 +203,7 @@
               <li><a href="#">Events for prospective students</a></li>
               
               <li>
-                <a href="#" class="global-mobile-nav__audience-link">Information for</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
                   <li><a href="#">International students</a></li>
                   <li><a href="#">International agents</a></li>
@@ -220,7 +220,7 @@
             </ul>
           </li>
           <li  class="new-header__newglobal-nav-item">
-            <a  class="new-header__newglobal-nav-link" href="#">Research</a>
+            <a  class="new-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
             <ul>
               <li>
                 <a href="#">Research overview</a>
@@ -236,7 +236,7 @@
               <li><a href="#">Research communities and networks</a></li>
               <li><a href="#">Participate in a research project</a></li>
               <li>
-                <a href="#" class="global-mobile-nav__audience-link">Information for</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
                   <li><a href="#">Future research students</a></li>
                   <li><a href="#">New research students</a></li>
@@ -248,7 +248,7 @@
             </ul>
           </li>
           <li  class="new-header__newglobal-nav-item">
-            <a class="new-header__newglobal-nav-link" href="#">Partners and community</a> 
+            <a class="new-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
             <ul>
               <li>
                 <a href="#">Partners and community overview</a>
@@ -265,7 +265,7 @@
               <li><a href="#">Indigenous Engagement</a></li>
               <li><a href="#">Community Facilities and Services</a></li>
               <li>
-                <a href="#" class="global-mobile-nav__audience-link">Information for</a>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
                   <li><a href="#">Alumni</a></li>
                   <li><a href="#">Donors</a></li>
@@ -276,7 +276,7 @@
             </ul>
           </li>
           <li class="new-header__newglobal-nav-item">
-            <a class="new-header__newglobal-nav-link" href="#">About</a>
+            <a class="new-header__newglobal-nav-link slide-menu__control" href="#">About</a>
             <ul>
               <li>
                 <a href="#">About overview</a>
