--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -49,8 +49,8 @@
           </div>
         </div>
         <ul>
-          <li  class="">
-            <a  class="" href="#">Study</a>
+          <li class="">
+            <a class="slide-menu__control" href="#">Study</a>
             <ul>
               <li>
                 <a href="/study/programs">Find a program</a>
@@ -91,7 +91,7 @@
             </ul>
           </li>
           <li>
-            <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+            <a class="slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
             <ul>
               <li>
                 <a href="/admissions/undergraduate">Undergraduate</a>
@@ -120,7 +120,7 @@
             </ul>
           </li>
           <li>
-            <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+            <a class="slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
             <ul>
               <li>
                 <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
@@ -137,13 +137,13 @@
             </ul>
           </li>
           <li>
-            <a href="/events">Events</a>
+            <a class="slide-menu__control" href="/events">Events</a>
           </li>
           <li>
-            <a href="/stories">Stories</a>
+            <a class="slide-menu__control" href="/stories">Stories</a>
           </li>
           <li>
-            <a href="/contact-us">Contact</a>
+            <a class="slide-menu__control" href="/contact-us">Contact</a>
           </li>
           <li  class="new-header__newglobal-nav-item">
             <a  class="new-header__newglobal-nav-link" href="#">Study</a>
