--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -471,7 +471,7 @@
     <footer class="new-footer" data-gtm-category="Footer">
       <div  class="new-footer__reconciliation">
         <div class="new-footer__acknowledgement">
-              UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="new-footer__link">Reconciliation statement</a>
+          <img class="new-footer__acknowledgement-flag" src="images/aboriginal.svg"/> <img class="new-footer__acknowledgement-flag" src="images/torres-strait-islanders.svg"/> <span class="new-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="new-footer__link">Reconciliation at UQ</a></span>
         </div>
       </div>
       <div class="new-footer__container">
