updated interim markup with new class names. fixed js class name references

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -13,9 +13,9 @@
   <body>
 
     <header class="new-header">
-      <div class="new-header__wrapper">
+      <div class="new-header__container">
         <div class="new-header__menu-toggle">
-          <button type="button" class="main-nav__toggle main-nav__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
+          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
         </div>
         <div class="new-header__logo">
           <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
@@ -23,18 +23,18 @@
           </a>
         </div>
         <div class="new-header__search-toggle">
-          <button class="main-nav__toggle main-nav__search-toggle">
+          <button class="nav-primary__toggle nav-primary__search-toggle">
             <div class="search-toggle__label">Search</div>
           </button>
         </div>
         
-        <div class="new-header__main-nav-wrapper">
-          <nav class="new-header__main-nav">
-            <ul class="new-header__main-nav-list">
-              <li><a class="new-header__main-nav-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
-              <li><a class="new-header__main-nav-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
-              <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
-              <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
+        <div class="new-header__nav-primary">
+          <nav class="new-header__nav-primary-container">
+            <ul class="new-header__nav-primary-list">
+              <li><a class="new-header__nav-primary-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
+              <li><a class="new-header__nav-primary-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
+              <li><a class="new-header__nav-primary-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
+              <li><a class="new-header__nav-primary-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
             </ul>
           </nav>
         </div>
@@ -157,20 +157,20 @@
           <li class="new-header__newglobal-nav-item">
             <a class="new-header__newglobal-nav-link" href="#">About</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">UQ home</a>
+          <li  class="new-header__nav-secondary-item">
+            <a class="new-header__nav-secondary-link" href="#">UQ home</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">News</a>
+          <li  class="new-header__nav-secondary-item">
+            <a class="new-header__nav-secondary-link" href="#">News</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Events</a>
+          <li  class="new-header__nav-secondary-item">
+            <a class="new-header__nav-secondary-link" href="#">Events</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Give</a>
+          <li  class="new-header__nav-secondary-item">
+            <a class="new-header__nav-secondary-link" href="#">Give</a>
           </li>
-          <li  class="new-header__black-nav-item">
-            <a class="new-header__black-nav-link" href="#">Contact</a>
+          <li  class="new-header__nav-secondary-item">
+            <a class="new-header__nav-secondary-link" href="#">Contact</a>
           </li>  
       </nav>
       <div class="new-header__search">
@@ -196,23 +196,23 @@
           </form>
         </div>
       </div>
-      <div class="new-header__black-nav-wrapper">
-        <nav class="new-header__black-nav">
-          <ul class="new-header__black-nav-list">
-              <li class="new-header__black-nav-item">
-                 <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
+      <div class="new-header__nav-secondary">
+        <nav class="new-header__nav-secondary-container">
+          <ul class="new-header__nav-secondary-list">
+              <li class="new-header__nav-secondary-item">
+                 <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+              <li class="new-header__nav-secondary-item">
+                  <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+              <li class="new-header__nav-secondary-item">
+                  <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
               </li>
-              <li class="new-header__black-nav-item">
-                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+              <li class="new-header__nav-secondary-item">
+                  <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
               </li>
-              <li class="new-header__black-nav-item">
-                <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__black-nav-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
+              <li class="new-header__nav-secondary-item">
+                <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
               </li>
           </ul>
         </nav>
@@ -704,7 +704,7 @@
           backLinkBefore: ' ',
         });
 
-        this.searchToggle = document.querySelector('.main-nav__search-toggle');
+        this.searchToggle = document.querySelector('.nav-primary__search-toggle');
 
         this.searchToggle.addEventListener('click', () => {
           menuLeft.close();
