undo grid containment - manual width. mobile slide menu link padding tweaks

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -137,13 +137,13 @@
             </ul>
           </li>
           <li>
-            <a class="slide-menu__control" href="/events">Events</a>
+            <a href="/events">Events</a>
           </li>
           <li>
-            <a class="slide-menu__control" href="/stories">Stories</a>
+            <a href="/stories">Stories</a>
           </li>
           <li>
-            <a class="slide-menu__control" href="/contact-us">Contact</a>
+            <a href="/contact-us">Contact</a>
           </li>
           <li  class="new-header__newglobal-nav-item">
             <a  class="new-header__newglobal-nav-link" href="#">Study</a>
