--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -82,7 +82,6 @@
                           </ul>
                         </nav>
                       </div>
-                      
                     </div>
                   </div>
               </div>
@@ -198,7 +197,6 @@
                             <li><a href="#">Campuses, maps & transport</a></li>
                             <li><a href="#">Colleges and Accommodation</a></li>
                             <li><a href="#">Community Faciliites and Services</a></li>
-
                           </ul>
                         </nav>
                       </div>
@@ -227,30 +225,44 @@
               <li>
                 <a href="#">Study overview</a>
               </li>
-              <li><a href="#">Find a course or program</a></li>
-              <li><a href="#">Browse study areas</a></li>
-              <li><a href="#">Why choose UQ</a></li>
-              <li><a href="#">Enriching student experience</a></li>
-              <li><a href="#">Study options & course types</a></li>
-              <li><a href="#">Scholarships</a></li>
-              <li><a href="#">Life at UQ & accommodation</a></li>
-              <li><a href="#">Starting university</a></li>
-              <li><a href="#">How to apply</a></li>
-              <li><a href="#">Campuses, maps & transport</a></li>
-              <li><a href="#">Events for prospective students</a></li>
-              
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Study options</a>
+                <ul>
+                  <li><a href="#">Find a course or program</a></li>
+                  <li><a href="#">Browse study areas</a></li>
+                  <li><a href="#">Study options & course types</a></li>
+                  <li><a href="#">How to apply</a></li>
+                  <li><a href="#">Scholarships</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Discover UQ</a>
+                <ul>
+                  <li><a href="#">Why choose UQ</a></li>
+                  <li><a href="#">Enhance your employability</a></li>
+                  <li><a href="#">Campuses, maps & transport</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Student life</a>
+                <ul>
+                  <li><a href="#">Life at UQ and accommodation</a></li>
+                  <li><a href="#">Extra student experiences</a></li>
+                  <li><a href="#">Events for prospective students</a></li>
+                  <li><a href="#">Starting university</a></li>
+                </ul>
+              </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
                   <li><a href="#">International students</a></li>
-                  <li><a href="#">International agents</a></li>
                   <li><a href="#">High school students</a></li>
                   <li><a href="#">Non-school leavers</a></li>
                   <li><a href="#">Postgraduate research (HDR) students</a></li>
                   <li><a href="#">Aboriginal and Torres Strait Islander students</a></li>
                   <li><a href="#">Study Abroad and Exchange students</a></li>
                   <li><a href="#">Teachers and guidance counsellors</a></li>
-                  <li><a href="#">Parents and Guardians</a></li>
+                  <li><a href="#">Parents and guardians</a></li>
                   <li><a href="#">Current students</a></li>
                 </ul>
               </li>
@@ -262,24 +274,31 @@
               <li>
                 <a href="#">Research overview</a>
               </li>
-              <li><a href="#">Explore UQ Research</a></li>
-              <li><a href="#">Research Excellence and Impact</a></li>
-              <li><a href="#">Faculties, Schools, Intitutues & Centres</a></li>
-              <li><a href="#">Research facilities</a></li>
-              <li><a href="#">Find a researcher or supervisor</a></li>
-              <li><a href="#">Research degrees and graduate students</a></li>
-              <li><a href="#">Research support, integrity and ethics</a></li>
-              <li><a href="#">Industry research collaboration</a></li>
-              <li><a href="#">Research communities and networks</a></li>
-              <li><a href="#">Participate in a research project</a></li>
+
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+                <ul>
+                  <li><a href="#">Research excellence and impact</a></li>
+                  <li><a href="#">Research support, integrity and ethics</a></li>
+                  <li><a href="#">Industry research collaboration</a></li>
+                  <li><a href="#">Faculties, schools, intitutues & centres</a></li>
+                  <li><a href="#">Find a researcher</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Research degrees</a>
+                <ul>
+                  <li><a href="#">PhDs and research degrees</a></li>
+                  <li><a href="#">Find a supervisor</a></li>
+                </ul>
+              </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
                   <li><a href="#">Future research students</a></li>
                   <li><a href="#">New research students</a></li>
                   <li><a href="#">Current research students</a></li>
-                  <li><a href="#">Prospective research partners</a></li>
-                  <li><a href="#">Research participants</a></li>
+                  <li><a href="#">Prospective research students</a></li>
                 </ul>
               </li>
             </ul>
@@ -290,23 +309,33 @@
               <li>
                 <a href="#">Partners and community overview</a>
               </li>
-              <li><a href="#">Partners, Initiatives and Impact</a></li>
-              <li><a href="#">Research & Corporate Partnerships</a></li>
-              <li><a href="#">Alumni Community</a></li>
-              <li><a href="#">Work placements and Internships</a></li>
-              <li><a href="#">Teaching and Exchange Collaborations</a></li>
-              <li><a href="#">High school engagement</a></li>
-              <li><a href="#">Giving and philanthropy</a></li>
-              <li><a href="#">Sponsorship</a></li>
-              <li><a href="#">Commnity Engagement & Volunteering</a></li>
-              <li><a href="#">Indigenous Engagement</a></li>
-              <li><a href="#">Community Facilities and Services</a></li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Partner with us</a>
+                <ul>
+                  <li><a href="#">Partners, initiatives and impact</a></li>
+                  <li><a href="#">Research & Corporate Partnerships</a></li>
+                  <li><a href="#">Work placements and Internships</a></li>
+                  <li><a href="#">Teaching and Exchange Collaborations</a></li>
+                  <li><a href="#">Sponsorship</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our communities</a>
+                <ul>
+                  <li><a href="#">Alumni community</a></li>
+                  <li><a href="#">Giving and philanthropy</a></li>
+                  <li><a href="#">Indigenous engagement</a></li>
+                  <li><a href="#">High school engagement</a></li>
+                  <li><a href="#">Community engagement & volunteering</a></li>
+                  <li><a href="#">Community facilities and services</a></li>
+                </ul>
+              </li>
               <li>
                 <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Information for</a>
                 <ul>
-                  <li><a href="#">Alumni</a></li>
                   <li><a href="#">Donors</a></li>
                   <li><a href="#">Business and industry</a></li>
+                  <li><a href="#">Government</a></li>
                   <li><a href="#">Media</a></li>
                 </ul>
               </li>
@@ -318,17 +347,32 @@
               <li>
                 <a href="#">About overview</a>
               </li>
-              <li><a href="#">Introducing UQ</a></li>
-              <li><a href="#">Vision, Values and Strategy</a></li>
-              <li><a href="#">Organisational Structure and Governance</a></li>
-              <li><a href="#">Teaching and Learning</a></li>
-              <li><a href="#">Campuses, maps and transport</a></li>
-              <li><a href="#">Faculties, Schools, Institutes and Centres</a></li>
-              <li><a href="#">Colleges and Accommodation</a></li>
-              <li><a href="#">Community Faciliites and Services</a></li>
-              <li><a href="#">Policies and Procedures</a></li>
-              <li><a href="#">Key initiatives</a></li>
-              <li><a href="#">Careers at UQ</a></li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Our profile</a>
+                <ul>
+                  <li><a href="#">Introducing UQ</a></li>
+                  <li><a href="#">Vision, values and strategy</a></li>
+                  <li><a href="#">Key initiatives</a></li>
+                  <li><a href="#">Organisational structure and governance</a></li>
+                  <li><a href="#">Policies and procedures</a></li>
+                  <li><a href="#">Faculties, schools, institutes and centres</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Campuses and facilities</a>
+                <ul>
+                  <li><a href="#">Campuses, maps & transport</a></li>
+                  <li><a href="#">Colleges and Accommodation</a></li>
+                  <li><a href="#">Community Faciliites and Services</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Excellence</a>
+                <ul>
+                  <li><a href="#">Teaching and Learning</a></li>
+                  <li><a href="#">Careers at UQ</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li  class="new-header__nav-secondary-item">
