updated header story

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -583,7 +583,7 @@
     <script type="text/javascript" src="js/uqds.min.js"></script>
     <script type="text/javascript">
       // Initialise header
-      new uq.newHeader();
+      new uq.header();
       // Initialise Main Navigation
       var navelement = document.getElementById("jsNav");
       new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
