Fix accessibility flags

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -23,7 +23,7 @@
           </a>
         </div>        
         <div class="uq-header__nav-primary"  data-gtm-category="Header navigation">
-          <nav class="uq-header__nav-primary-container">
+          <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
               <li><a class="uq-header__nav-primary-link" href="https://future-students.uq.edu.au/">Study</a></li>
               <li><a class="uq-header__nav-primary-link" href="https://research.uq.edu.au/">Research</a></li>
@@ -38,7 +38,7 @@
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav" data-gtm-category="Header navigation mobile">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav" data-gtm-category="Header navigation mobile" aria-label="primary navigation mobile">
         <div class="uq-site-header__title-container">
           <div class="uq-site-header__title-container__left">
             <a href="/" class="uq-site-header__title">Site title</a>
@@ -374,7 +374,7 @@
         </div>
       </div>
       <div class="uq-footer__container">
-        <nav class="uq-footer__navigation uq-footer--desktop" data-gtm-category="Footer navigation">
+        <nav class="uq-footer__navigation uq-footer--desktop" data-gtm-category="Footer navigation" aria-label="footer navigation">
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-footer__navigation-item uq-footer__navigation--is-open">
               <h2 class="uq-footer__navigation-title">Media</h2>
@@ -462,7 +462,7 @@
         </nav>
 
         <!-- Mobile Footer Navigation-->
-        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile">
+        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation mobile" aria-label="footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
               <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
@@ -551,7 +551,7 @@
         <!-- Footer contact details -->
         <div class="uq-footer__contact">   
           <nav class="uq-footer__contact-item">
-            <ul class="uq-footer__footer-list uq-footer__contact-social"> 
+            <ul class="uq-footer__footer-list uq-footer__contact-social" aria-label="Social Media"> 
               <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
               <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
               <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons"></a></li>
@@ -562,14 +562,14 @@
           <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
        
         </div>
-        <nav class="uq-footer__meta">
+        <nav class="uq-footer__meta" aria-label="Business meta">
           <ul  class="uq-footer__footer-list">
             <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
             <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
             <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a></li>
           </ul>
         </nav>
-        <nav class="uq-footer__footer">
+        <nav class="uq-footer__footer" aria-label="Term and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
                   <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
