--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -23,7 +23,7 @@
           </a>
         </div>
         <div class="uq-header__nav-primary" data-gtm-category="Header navigation">
-          <nav class="uq-header__nav-primary-container">
+          <nav class="uq-header__nav-primary-container" aria-label="primary navigation">
             <ul class="uq-header__nav-primary-list">
               <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/">Study</a>
                 <div class="uq-header__megamenu">
@@ -32,7 +32,7 @@
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Study options</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Find a course or program</a></li>
                             <li><a href="#">Browse study areas</a></li>
@@ -40,30 +40,30 @@
                             <li><a href="#">How to apply</a></li>
                             <li><a href="#">Scholarships</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Discover UQ</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Why choose UQ</a></li>
                             <li><a href="#">Enhance your employability</a></li>
                             <li><a href="#">Campuses, maps & transport</a></li>
                           </ul>
-                        </nav>
+                        </div>
                         <div class="megamenu__heading">Student life</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Life at UQ and accommodation</a></li>
                             <li><a href="#">Extra student experiences</a></li>
                             <li><a href="#">Events for prospective students</a></li>
                             <li><a href="#">Starting university</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">International students</a></li>
                             <li><a href="#">High school students</a></li>
@@ -75,7 +75,7 @@
                             <li><a href="#">Parents and guardians</a></li>
                             <li><a href="#">Current students</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -88,7 +88,7 @@
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Partner with us</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Research excellence and impact</a></li>
                             <li><a href="#">Research support, integrity and ethics</a></li>
@@ -96,27 +96,27 @@
                             <li><a href="#">Faculties, schools, intitutues & centres</a></li>
                             <li><a href="#">Find a researcher</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Research degrees</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">PhDs and research degrees</a></li>
                             <li><a href="#">Find a supervisor</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Future research students</a></li>
                             <li><a href="#">New research students</a></li>
                             <li><a href="#">Current research students</a></li>
                             <li><a href="#">Prospective research students</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -129,7 +129,7 @@
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Partner with us</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Partners, initiatives and impact</a></li>
                             <li><a href="#">Research & Corporate Partnerships</a></li>
@@ -137,11 +137,11 @@
                             <li><a href="#">Teaching and Exchange Collaborations</a></li>
                             <li><a href="#">Sponsorship</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Our communities</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Alumni community</a></li>
                             <li><a href="#">Giving and philanthropy</a></li>
@@ -150,18 +150,18 @@
                             <li><a href="#">Community engagement & volunteering</a></li>
                             <li><a href="#">Community facilities and services</a></li>
                          </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Information for</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Donors</a></li>
                             <li><a href="#">Business and industry</a></li>
                             <li><a href="#">Government</a></li>
                             <li><a href="#">Media</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -174,7 +174,7 @@
                     <div class="megamenu__row">
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Our profile</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Introducing UQ</a></li>
                             <li><a href="#">Vision, values and strategy</a></li>
@@ -183,26 +183,26 @@
                             <li><a href="#">Policies and procedures</a></li>
                             <li><a href="#">Faculties, schools, institutes and centres</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Campuses and facilities</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Campuses, maps & transport</a></li>
                             <li><a href="#">Colleges and Accommodation</a></li>
                             <li><a href="#">Community Faciliites and Services</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                       <div class="megamenu__column">
                         <div class="megamenu__heading">Excellence</div>
-                        <nav class="megamenu__menu">
+                        <div class="megamenu__menu">
                           <ul>
                             <li><a href="#">Teaching and Learning</a></li>
                             <li><a href="#">Careers at UQ</a></li>
                           </ul>
-                        </nav>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -217,7 +217,7 @@
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Header navigation mobile"  aria-label="primary navigation mobile">
         <ul>
           <li class="uq-header__newglobal-nav-item">
             <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
@@ -566,7 +566,7 @@
         </nav>
 
         <!-- Mobile Footer Navigation-->
-        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation">
+        <nav class="uq-footer__navigation uq-footer--mobile" data-gtm-category="Footer navigation" aria-label="footer navigation mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
               <button class="uq-accordion__toggle uq-footer__navigation-toggle">Media</button>
@@ -654,7 +654,7 @@
         </nav>
         <!-- Footer contact details -->
         <div class="uq-footer__contact">   
-          <nav class="uq-footer__contact-item">
+          <nav class="uq-footer__contact-item" aria-label="Social Media">
             <ul class="uq-footer__footer-list uq-footer__contact-social"> 
               <li class="uq-footer__footer-item"><a href="https://www.facebook.com/uniofqld" class="uq-footer__meta-icons--facebook uq-footer__meta-icons"></a></li> 
               <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons"></a></li> 
@@ -666,14 +666,14 @@
           <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
        
         </div>
-        <nav class="uq-footer__meta">
+        <nav class="uq-footer__meta" aria-label="Business meta">
           <ul  class="uq-footer__footer-list">
             <li class="uq-footer__footer-item">&copy; The University of Queensland</li>
             <li class="uq-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
             <li class="uq-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a></li>
           </ul>
         </nav>
-        <nav class="uq-footer__footer">
+        <nav class="uq-footer__footer" aria-label="Term and conditions">
           <ul class="uq-footer__footer-list">
               <li class="uq-footer__footer-item">
                   <a href="https://www.uq.edu.au/terms-of-use/" class="uq-footer__link">Privacy &amp; Terms of use</a>
