--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -38,7 +38,7 @@
           </button>
         </div>
       </div>
-      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"  data-gtm-category="Primary header">
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
         <div class="uq-site-header__title-container">
           <div class="uq-site-header__title-container__left">
             <a href="/" class="uq-site-header__title">Site title</a>
